@startuml adapterMONE
!theme plain
skinparam linetype ortho

class RouteService {
  - provider: IRouteProvider
  + requestRoute(origin, destination, mobilityType, routeType): Promise<IRouteData>
}

interface IRouteProvider <<interface>> {
  + getRoute(origin: string, destination: string, mobilityType: string, routeType: string): Promise<Route>
}

class OpenRouteServiceAdapter {
  - api: OpenRouteServiceHttpClient
  + getRoute(origin: string, destination: string, mobilityType: string, routeType: string): Promise<Route>
}

class OpenRouteServiceHttpClient {
  + getRoute(origin: string, destination: string, mobilityType: string, routeType: string): Promise<Response>
}

class Route

RouteService --> IRouteProvider : usa
IRouteProvider <|.. OpenRouteServiceAdapter
OpenRouteServiceAdapter --> OpenRouteServiceHttpClient : solicita JSON
OpenRouteServiceAdapter ..> Route : crea objeto de dominio


@enduml